--- a/preamble.tex
+++ b/preamble.tex
@@ -31,7 +31,7 @@
 \crefname{setup}{Setup}{Setup}
 \crefname{question}{Question}{Question}
 \crefname{convention}{Convention}{Convention}
-
+\newcommand{\creflastconjunction}{, and\nobreakspace}
 
  %theorem style environments
 \newtheorem{theorem}{Theorem}[section]
